// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RBAC ThumbnailSelect renders items with RBAC restrictions: rbac items should be disabled 1`] = `
<div>
  <div
    class="bp3-form-group ThumbnailSelect--mainContainer"
  >
    <div
      class="bp3-form-content"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
      >
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <label
              class="Thumbnail--squareCardContainer"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card Thumbnail--squareCard Card--disabled"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="nav-organization-hover"
                >
                  <svg
                    height="26"
                    viewBox="0 0 16 16"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink"
                  >
                    <filter
                      id="a"
                    >
                      <fecolormatrix
                        in="SourceGraphic"
                        type="matrix"
                        values="0 0 0 0 1.000000 0 0 0 0 1.000000 0 0 0 0 1.000000 0 0 0 1.000000 0"
                      />
                    </filter>
                    <filter
                      id="b"
                    >
                      <fecolormatrix
                        in="SourceGraphic"
                        type="matrix"
                        values="0 0 0 0 1.000000 0 0 0 0 1.000000 0 0 0 0 1.000000 0 0 0 1.000000 0"
                      />
                    </filter>
                    <filter
                      height="100%"
                      id="c"
                      width="100%"
                      x="0%"
                      y="0%"
                    >
                      <fegaussianblur
                        in="SourceGraphic"
                        stdDeviation="0"
                      />
                    </filter>
                    <g
                      fill="none"
                      fill-rule="evenodd"
                      filter="url(#a)"
                      opacity="0.6"
                      transform="translate(-418 -707)"
                    >
                      <g
                        filter="url(#b)"
                        opacity="0.6"
                        transform="translate(418 707)"
                      >
                        <g
                          fill-rule="nonzero"
                        >
                          <path
                            d="m0 0h16v16h-16z"
                            fill="#000"
                            opacity="0"
                          />
                          <path
                            d="m14.5 10.0333333h-2v-1.5333333h1c.2666667 0 .5-.23333333.5-.5s-.2333333-.5-.5-.5h-5v-1.5-.03333333h2c.2666667 0 .5-.23333333.5-.5v-3.96666667c0-.26666667-.2333333-.5-.5-.5h-5c-.26666667 0-.5.23333333-.5.5v3.96666667c0 .26666667.23333333.5.5.5h2v1.53333333h-5c-.26666667 0-.5.23333333-.5.5s.23333333.5.5.5h1v1.5333333h-2c-.26666667 0-.5.2333334-.5.5v3.9666667c0 .2666667.23333333.5.5.5h5c.26666667 0 .5-.2333333.5-.5v-3.9666667c0-.2666666-.23333333-.5-.5-.5h-2v-1.5333333h7v1.5333333h-2c-.26666667 0-.5.2333334-.5.5v3.9666667c0 .2666667.23333333.5.5.5h5c.2666667 0 .5-.2333333.5-.5v-3.9666667c0-.2666666-.2333333-.5-.5-.5zm-8.5-8.0333333h4v2.96666667h-4zm0 12h-4v-2.9666667h4zm8 0h-4v-2.9666667h4z"
                            fill="#dbdbdb"
                            filter="url(#c)"
                          />
                        </g>
                      </g>
                    </g>
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey500 StyledProps--margin-top-small"
              >
                I1
              </p>
              <input
                disabled=""
                name="rRbacThumbnail"
                type="checkbox"
                value="i1"
              />
            </label>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`RBAC ThumbnailSelect renders items without RBAC restrictions: non rbac items 1`] = `
<div>
  <div
    class="bp3-form-group ThumbnailSelect--mainContainer"
  >
    <div
      class="bp3-form-content"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
      >
        <label
          class="Thumbnail--squareCardContainer"
        >
          <div
            class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
            tabindex="0"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="nav-organization-hover"
            >
              <svg
                height="26"
                viewBox="0 0 16 16"
                width="26"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <filter
                  id="a"
                >
                  <fecolormatrix
                    in="SourceGraphic"
                    type="matrix"
                    values="0 0 0 0 1.000000 0 0 0 0 1.000000 0 0 0 0 1.000000 0 0 0 1.000000 0"
                  />
                </filter>
                <filter
                  id="b"
                >
                  <fecolormatrix
                    in="SourceGraphic"
                    type="matrix"
                    values="0 0 0 0 1.000000 0 0 0 0 1.000000 0 0 0 0 1.000000 0 0 0 1.000000 0"
                  />
                </filter>
                <filter
                  height="100%"
                  id="c"
                  width="100%"
                  x="0%"
                  y="0%"
                >
                  <fegaussianblur
                    in="SourceGraphic"
                    stdDeviation="0"
                  />
                </filter>
                <g
                  fill="none"
                  fill-rule="evenodd"
                  filter="url(#a)"
                  opacity="0.6"
                  transform="translate(-418 -707)"
                >
                  <g
                    filter="url(#b)"
                    opacity="0.6"
                    transform="translate(418 707)"
                  >
                    <g
                      fill-rule="nonzero"
                    >
                      <path
                        d="m0 0h16v16h-16z"
                        fill="#000"
                        opacity="0"
                      />
                      <path
                        d="m14.5 10.0333333h-2v-1.5333333h1c.2666667 0 .5-.23333333.5-.5s-.2333333-.5-.5-.5h-5v-1.5-.03333333h2c.2666667 0 .5-.23333333.5-.5v-3.96666667c0-.26666667-.2333333-.5-.5-.5h-5c-.26666667 0-.5.23333333-.5.5v3.96666667c0 .26666667.23333333.5.5.5h2v1.53333333h-5c-.26666667 0-.5.23333333-.5.5s.23333333.5.5.5h1v1.5333333h-2c-.26666667 0-.5.2333334-.5.5v3.9666667c0 .2666667.23333333.5.5.5h5c.26666667 0 .5-.2333333.5-.5v-3.9666667c0-.2666666-.23333333-.5-.5-.5h-2v-1.5333333h7v1.5333333h-2c-.26666667 0-.5.2333334-.5.5v3.9666667c0 .2666667.23333333.5.5.5h5c.2666667 0 .5-.2333333.5-.5v-3.9666667c0-.2666666-.2333333-.5-.5-.5zm-8.5-8.0333333h4v2.96666667h-4zm0 12h-4v-2.9666667h4zm8 0h-4v-2.9666667h4z"
                        fill="#dbdbdb"
                        filter="url(#c)"
                      />
                    </g>
                  </g>
                </g>
              </svg>
            </span>
          </div>
          <p
            class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
          >
            I1
          </p>
          <input
            name="nonRbacThumbnail"
            type="checkbox"
            value="i1"
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;
